--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/marked": "^5.0.2",
 		"http-server": "^14.1.1",
+		"marked": "^16.2.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
